<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CryptoActivity">

    <Button
        android:id="@+id/button_code"
        android:layout_width="148dp"
        android:layout_height="43dp"
        android:layout_centerVertical="true"
        android:text="@string/button_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="179dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@+id/editText_left"
        app:layout_constraintEnd_toEndOf="@+id/editText_right"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="377dp"
        android:layout_height="100dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

    <Button
        android:id="@+id/button_decode"
        android:layout_width="148dp"
        android:layout_height="43dp"
        android:layout_centerVertical="true"
        android:text="@string/button_decode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_code"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/button_code"
        app:layout_constraintTop_toBottomOf="@+id/button_code"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/button_filepicker"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/textFile"
        app:layout_constraintStart_toEndOf="@+id/textFile"
        app:layout_constraintTop_toTopOf="@+id/textFile"
        app:srcCompat="@android:drawable/sym_contact_card" />

    <ImageButton
        android:id="@+id/button_save"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toStartOf="@+id/button_copy"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <ImageButton
        android:id="@+id/button_copy"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="?attr/actionModeCopyDrawable" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="376dp"
        android:layout_height="143dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="226dp"
        android:layout_height="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024">

        <RadioButton
            android:id="@+id/radioButton_ceasar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_caesarСipher" />

        <RadioButton
            android:id="@+id/radioButton_wordcode"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/radiobutton_wordCode" />
    </RadioGroup>

    <EditText
        android:id="@+id/editText_left"
        android:layout_width="179dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239" />

    <EditText
        android:id="@+id/editText_right"
        android:layout_width="171dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/editText_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toEndOf="@+id/editText_left"
        app:layout_constraintTop_toTopOf="@+id/editText_left"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/textFile"
        android:layout_width="218dp"
        android:layout_height="43dp"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/hint_text_file"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_left"
        app:layout_constraintVertical_bias="0.693" />

    <Button
        android:id="@+id/statistic_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="Statictic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>